<resources>
    <string name="app_name">AppNews</string>
    <string name="news">News</string>
    <string name="country_us">Country US</string>
    <string name="bbc_news">BBC News</string>
    <string name="choose_the_filter">Choose the filter</string>
    <string name="confirm">Confirm</string>
    <string name="error_to_request_api">Error to request api</string>
    <string name="news_empty">News empty</string>
    <string name="back_to_list">back to list</string>
    <string name="open_site_of_news">open site of news</string>
    <string name="news_detail">News detail</string>
</resources>