<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feature.newsdetail.view.NewsDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_news_detail_header_page"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_news_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_to_list"
            android:importantForAccessibility="yes"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/tv_news_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-medium"
            android:padding="4dp"
            android:text="@string/news_detail"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_news_detail_open_external"
            app:layout_constraintStart_toEndOf="@id/ib_news_detail_back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/iv_news_detail_open_external"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/open_site_of_news"
            android:importantForAccessibility="yes"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_open_in_new" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_news_detail_header_page">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_news_detail_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_image_not_supported" />

            <TextView
                android:id="@+id/tv_news_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:padding="4dp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_news_detail_image"
                tools:text="Public invited to suggest names for next Archbishop of Canterbury" />

            <TextView
                android:id="@+id/tv_news_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:padding="4dp"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_news_detail_title"
                tools:text="The chosen candidate will be the 106th person to take on the most senior role in the Church of England." />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow_news_detail_author_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:constraint_referenced_ids="tv_news_detail_author, tv_news_detail_date"
                app:flow_horizontalStyle="spread_inside"
                app:flow_wrapMode="none"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_news_detail_description" />

            <TextView
                android:id="@+id/tv_news_detail_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-medium"
                android:maxWidth="200dp"
                android:padding="4dp"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:ignore="MissingConstraints"
                tools:text="Sahil Kapur, Frank Thorp V, Kyle Stewart asdsad " />

            <TextView
                android:id="@+id/tv_news_detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:padding="4dp"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:ignore="MissingConstraints"
                tools:text="06/02/2025" />

            <TextView
                android:id="@+id/tv_news_detail_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:padding="4dp"
                android:textAlignment="textStart"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flow_news_detail_author_container"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Names can be submitted to the Crown Nominations Commission (CNC), the body charged with nominating the new archbishop.\r\nThe Church said the consultation, which runs until 28 March, was \an opportunit… [+1658 chars]" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>